# mastodon-synchronizer

./: .gitignore  Cargo.toml  README.md  config-example.toml  config.toml  liste-comptes
src/: config.rs  env.rs  instagram.rs  main.rs  mastodon.rs
