[package]
name = "mastodon-synchronizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.21", features = ["serde"] }
progress_bar = "1.0"
string-tools = "0.1"
